# Q1_25_Builder_Light-JH

./: .gitignore  README.md
airdrop/: airdrop.ts  enroll.ts  keygen.ts  transfer.ts
airdrop/programs/: Turbin3_prereq.ts
airdroprust/: Cargo.toml
airdroprust/src/: lib.rs
airdroprust/src/programs/: turbin3_prereq.rs
amm/: Anchor.toml
amm/programs/amm/: Cargo.toml
amm/programs/amm/src/: errors.rs  lib.rs
auction/: Anchor.toml
auction/programs/auction/: Cargo.toml
auction/programs/auction/src/: errors.rs  lib.rs
auction/tests/: auction.ts
capstone-auction/: Anchor.toml  Cargo.toml  package-lock.json  package.json
capstone-auction/cli/: Cargo.toml
capstone-auction/cli/src/: decimal.rs  idl.rs  main.rs
capstone-auction/demo/: admin.json  auctioneer.json  bidder1.json  bidder2.json  demo.sh  mintA.json  mintB.json  setup.sh
capstone-auction/programs/auction/src/: lib.rs
capstone-auction/tests/: auction.ts
escrow/: Anchor.toml  package-lock.json  package.json
escrow/programs/escrow/src/: lib.rs
escrow/tests/: escrow.ts
marketplace/: Anchor.toml
marketplace/programs/marketplace/: Cargo.toml
marketplace/programs/marketplace/src/: errors.rs  lib.rs
nft_staking/: Anchor.toml
nft_staking/programs/nft_staking/: Cargo.toml
nft_staking/programs/nft_staking/src/: errors.rs  lib.rs
solana-starter/ts/cluster1/: nft_image.ts  nft_mint.ts  spl_init.ts  spl_mint.ts  vault_deposit.ts  vault_deposit_spl.ts  vault_init.ts  vault_withdraw.ts  vault_withdraw_spl.ts
solana-starter/ts/prereqs/: airdrop.ts
(+50 files in other folders)
