[package]
name = "auction-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
solana-client = "1.18.11"
solana-sdk = "1.18.11"
bs58 = "0.4.0"
borsh = "0.10.3"
solana-program = "1.18.11"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
dirs = "6.0.0"
spl-associated-token-account = "3.0.4"
spl-token = "3.5.0"
